--- a/content/blog/bypassing-dep/index.adoc
+++ b/content/blog/bypassing-dep/index.adoc
@@ -16,9 +16,9 @@
 
 = Bypassing DEP with ROP
 
-In the link:../understanding-dep/[past blog entry], we made an introduction
-to what `DEP` (Data Execution Protection) is and how it affected common
-buffer overflow exploits.
+In the link:../understanding-dep/[last blog entry],
+we made an introduction to what `DEP` (Data Execution Protection) is
+and how it affected common buffer overflow exploits.
 
 In this post, we will show a way to bypass `DEP` using Return-Oriented
 Programming or `ROP`.
@@ -28,12 +28,12 @@ Programming or `ROP`.
 When we are writing an exploit to a buffer overflow vulnerability on an
 application without `DEP`, we overwrite the saved instruction pointer on the
 stack frame of the affected function with a pointer to something like
-`JMP ESP` (or any other register pointing to our shellcode) and then place
-a shellcode on the stack, which is finally executed when the `JMP ESP` is
-performed.
+`JMP ESP` (or any other register pointing to our shellcode).
+We then place a shellcode on the stack,
+which is finally executed when the `JMP ESP` is performed.
 
-When we perform a `JMP ESP` (or any other general purpose register),
-the program expects to find *instructions* on the address pointed to `ESP`.
+When we perform a `JMP ESP` (or any other general-purpose register),
+the program expects to find *instructions* in the address pointed to `ESP`.
 With `DEP`, we can't execute instructions on the stack,
 but we still control the execution flow.
 
@@ -42,8 +42,8 @@ a pointer to `JMP ESP`, we overwrite it with a pointer to a `RETN`
 instruction? The `RETN` instruction is commonly used in the function epilogues
 and will make one thing: Pop the value pointed by `ESP` and use it as the
 next instruction pointer or `EIP`. In other words, `RETN` expects to find
-on the address pointed to `ESP`, a *pointer to a instruction*, not an
-*instruction* itself.
+in the address pointed to `ESP`, a *pointer to an instruction*,
+not an *instruction* itself.
 
 As we control the execution flow and also can write on the stack, we can
 do whatever we want. Let's find a `RETN` instruction first:
@@ -53,7 +53,7 @@ do whatever we want. Let's find a `RETN` instruction first:
 !mona find -type instr -s "retn" -p 10 -o
 ----
 
-This will tell `mona` to find up to 10 `RETN` instrunctions. The result is:
+This will tell `mona` to find up to 10 `RETN` instructions. The result is:
 
 image::retn1.png[RETN instructions]
 
@@ -97,12 +97,12 @@ Here's a detail of what happened:
 . We put a breakpoint at the address of the `RETN` instruction.
 . We executed the exploit.
 . The breakpoint was hit.
-. When it hits, look carefully at the value pointed by `ESP`: `EE05C031`
+. When it hits, look carefully at the value pointed by `ESP`: `EE05C031`.
 . That value is part of the shellcode injected:
 .. `xor eax,eax` -> `\x31\xc0`
 .. `add eax,0xdeadbeee` -> `\x05\xee\xbe\xad\xde` (the first two bytes)
-. When the `RETN` instruction is executed, that value `EE05C031` is stored on
-`EIP`.
+. When the `RETN` instruction is executed,
+that value `EE05C031` is stored on `EIP`.
 
 What it means is that we can replace the `EE05C031` bytes with an arbitrary
 pointer that will become the next instruction to be executed!
@@ -160,26 +160,26 @@ Wonderful! Here's what happened:
 
 However, there's a problem with that. If you look again at the animation,
 the execution flow was diverted to the location on where the `xor eax,eax`
-instruction was placed but then, we lost control.
+instruction was placed, but then we lost control.
 
 We need to make `EAX = 0xdeadbeee`. There are several ways to do that. We
 tried with `xor eax,eax -> add eax,0xdeadbeee` but another way to do it
 is to place the value `0xdeadbeee` on top of the stack and then perform a
-`pop eax`. We also need regain control of the execution flow. This can be
-done by returning back to the stack, so we can execute the last
-instruction on our shellcode `inc eax` and thus, make `EAX = 0xdeadbeef`.
-That means that we need to find an address to a `pop eax` instruction followed
-by a `retn`.
+`pop eax`. We also need to regain control of the execution flow. This can be
+done by returning to the stack, so we can execute the last
+instruction on our shellcode `inc eax` and make `EAX = 0xdeadbeef`.
+That means that we need to find an address to a `pop eax` instruction
+followed by a `retn`.
 
 image::popeax1.gif[POP EAX]
 
-Bingo! We found it at `625011B4`. Now you see why this is called
-Return-Oriented Programming? It is because we need to always return back to
+Bingo! We found it at `625011B4`. Now, do you see why this is called
+Return-Oriented Programming? It is because we always need to return back to
 the stack to fetch the next pointer to our next desired instruction.
 For the record, any instruction or set of instructions
 followed by a `retn` is called a *Gadget* in `ROP` terms.
 
-Our `pop eax # retn` gadget rely on the stack having the value `0xdeadbeee`
+Our `pop eax # retn` gadget relies on the stack having the value `0xdeadbeee`
 on the top. Let's update our exploit with that:
 
 [source,python]
@@ -217,7 +217,7 @@ And check it:
 image::popeax2.gif[POP EAX]
 
 Beautiful! We were able to make `EAX = 0xdeadbeee` using `ROP`. Now, the final
-step is to find a `inc eax` pointer to make `EAX = 0xdeadbeef`.
+step is to find an `inc eax` pointer to make `EAX = 0xdeadbeef`.
 
 image::inceax.png[INC EAX]
 
@@ -266,23 +266,23 @@ instruction on the stack! We have bypassed `DEP`!
 
 You may notice by now that finding useful gadgets could become something
 really tedious. Fortunately for us, `mona` has made this task easy.
-You just need to simply issue the following:
+You just need to issue the following:
 
 [source,bash]
 ----
 !mona rop
 ----
 
-And wait for `mona` do the hard work:
+And wait for `mona` to do the hard work:
 
 image::mona1.gif[Mona ROP]
 
 With that, `mona` will find usable gadgets on the execution environment.
 A file called `rop.txt` is placed on the `mona` directory of the debuggee
 application containing all the gadgets found. `mona` also generates
-proposal of something called `ROP chains`, which is nothing but a set of
+a proposal of something called `ROP chains`, which is nothing but a set of
 ROP gadgets chained together to perform something more complex. I won't spoil
-the next blog entry, but ROP chains will be used later on a more
+the next blog entry, but ROP chains will be used later in a more
 link:../vulnserver-trun-rop/[serious exploitation].
 
 == Conclusions
