fix(doc): #3969 updated subtitle
Former-commit-id: a344d438f4022c069f56cf1ce4c3f2272c8a7802

--- a/content/blog/hevd-smep-bypass/index.adoc
+++ b/content/blog/hevd-smep-bypass/index.adoc
@@ -1,7 +1,7 @@
 :slug: hevd-smep-bypass/
 :date: 2020-09-18
 :category: attacks
-:subtitle: Bypassing SMEP
+:subtitle: Bypassing OS protections
 :tags: osee, training, exploit, windows, kernel, hevd
 :image: cover.png
 :alt: Photo by Basil James on Unsplash
