--- a/content/pages/rules/source/161/index.adoc
+++ b/content/pages/rules/source/161/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/161/
 :category: source
 :description: This requirement establishes the importance of defining secure default options to avoid unexpected behaviors in the application.
-:keywords: Default, Source Code, Conditional, Programming, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Default, Source Code, Conditional, Programming, ASVS, CAPEC, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R161. Define secure default options
@@ -65,45 +65,53 @@ and detect potential security issues.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/396.html[CWE-396: Declaration of Catch for Generic Exception].
+. [[r1]] link:http://capec.mitre.org/data/definitions/24.html[CAPEC-24: Filter Failure through Buffer Overflow].
+In this attack, the idea is to cause an active filter to fail by causing an
+oversized transaction.
+An attacker may try to feed overly long input strings to the program in an
+attempt to overwhelm the filter (by causing a buffer overflow) and hoping that
+the filter does not fail securely
+(i.e. the user input is let into the system unfiltered).
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/396.html[CWE-396: Declaration of Catch for Generic Exception].
 Catching overly broad exceptions promotes complex error handling code that is
 more likely to contain security vulnerabilities.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/397.html[CWE-397: Declaration of Throws for Generic Exception].
+. [[r3]] link:https://cwe.mitre.org/data/definitions/397.html[CWE-397: Declaration of Throws for Generic Exception].
 Throwing overly broad exceptions promotes complex error handling code that is
 more likely to contain security vulnerabilities.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/478.html[CWE-478: Missing Default Case in Switch Statement].
+. [[r4]] link:https://cwe.mitre.org/data/definitions/478.html[CWE-478: Missing Default Case in Switch Statement].
 The code does not have a default case in a switch statement,
 which might lead to complex logical errors and resultant weaknesses.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/544.html[CWE-544: Missing Standardized Error Handling Mechanism].
+. [[r5]] link:https://cwe.mitre.org/data/definitions/544.html[CWE-544: Missing Standardized Error Handling Mechanism].
 The software does not use a standardized method for handling errors throughout
 the code,
 which might introduce inconsistent error handling and resultant weaknesses.
 
-. [[r5]] link:https://standards.ieee.org/findstds/standard/1028-2008.html[IEEE: Standard for Software Reviews and Audits].
+. [[r6]] link:https://standards.ieee.org/findstds/standard/1028-2008.html[IEEE: Standard for Software Reviews and Audits].
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.5)]
 Verify that access controls fail securely including when an exception occurs.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.2 Algorithms.(6.2.1)]
 Verify that all cryptographic modules fail securely,
 and errors are handled in a way that does not enable **Padding Oracle**
 attacks.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V7.4 Error Handling.(7.4.2)]
 Verify that exception handling (or a functional equivalent) is used across the
 codebase to account for expected and unexpected error conditions.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V7.4 Error Handling.(7.4.3)]
 Verify that a "last resort" error handler is defined which will catch all
 unhandled exceptions.
 
-. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.5]
+. [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.5]
 Address common coding vulnerabilities in software-development processes such as
 improper error handling.
