--- a/content/pages/rules/source/337/index.adoc
+++ b/content/pages/rules/source/337/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/337/
 :category: source
 :description: This requirement establishes the importance of safely managing threads to avoid race conditions, especially in critical business logic flows.
-:keywords: Thread, Safe, Race, Condition, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Thread, Safe, Race, Condition, ASVS, CAPEC, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R337. Make critical logic flows thread safe
@@ -23,7 +23,22 @@ to prevent **race conditions** from arising.
 
 == References
 
-. [[r1]] link:https://cwe.mitre.org/data/definitions/362.html[CWE-362: Concurrent Execution using Shared Resource with
+. [[r1]] link:http://capec.mitre.org/data/definitions/25.html[CAPEC-25: Forced Deadlock].
+The adversary triggers and exploits a deadlock condition in the target software
+to cause a denial of service.
+A deadlock can occur when two or more competing actions are waiting for each
+other to finish,
+and thus neither ever does.
+
+. [[r2]] link:http://capec.mitre.org/data/definitions/26.html[CAPEC-26: Leveraging Race Conditions].
+The adversary targets a race condition occurring when multiple processes access
+and manipulate the same resource concurrently,
+and the outcome of the execution depends on the particular order in which the
+access takes place.
+The adversary can leverage a race condition by "running the race",
+modifying the resource and modifying the normal execution flow.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/362.html[CWE-362: Concurrent Execution using Shared Resource with
 Improper Synchronization ('Race Condition').]
 The program contains a code sequence that can run concurrently with other code,
 and the code sequence requires temporary, exclusive access to a shared
@@ -31,31 +46,31 @@ resource,
 but a timing window exists in which the shared resource can be modified by
 another code sequence that is operating concurrently.
 
-. [[r2]] link:https://cwe.mitre.org/data/definitions/367.html[CWE-367: Time-of-check Time-of-use (TOCTOU) Race Condition.]
+. [[r4]] link:https://cwe.mitre.org/data/definitions/367.html[CWE-367: Time-of-check Time-of-use (TOCTOU) Race Condition.]
 The software checks the state of a resource before using that resource,
 but the resource's state can change between the check and the use in a way that
 invalidates the results of the check.
 This can cause the software to perform invalid actions when the resource is in
 an unexpected state.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.20)]
 Verify that the firmware update process is not vulnerable to time-of-check vs
 time-of-use attacks.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.11 Business Logic Architectural Requirements.(1.11.2)]
 Verify that all high-value business logic flows,
 including authentication, session management and access control,
 do not share unsynchronized state.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.11 Business Logic Architectural Requirements.(1.11.3)]
 Verify that all high-value business logic flows,
 including authentication, session management and access control,
 are thread safe and resistant to time-of-check and time-of-use race conditions.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V11.1 Business Logic Security Requirements.(11.1.6)]
 Verify the application does not suffer from "time of check to time of use"
 (*TOCTOU*) issues or other race conditions for sensitive operations.
