skims\refac(back): #3131.1 reuse code
Former-commit-id: 60f21be25818ba17112d365ee39257210650f093

--- a/skims/static/translations/findings/F031_AWS.yaml
+++ b/skims/static/translations/findings/F031_AWS.yaml
@@ -1,10 +1,10 @@
-src.lib_path.f031_aws.cfn_open_passrole:
+src.lib_path.f031_aws.open_passrole:
   en: iam:PassRole with wildcard resource allows an elevation of privileges, {path}
   es: iam:PassRole con recurso no especifico permite una elevación de privilegios, {path}
-src.lib_path.f031_aws.cfn_permissive_policy:
+src.lib_path.f031_aws.permissive_policy:
   en: Excessive privileges in {path}
   es: Privilegios excesivos in {path}
-src.lib_path.f031_aws.cfn_negative_statement:
+src.lib_path.f031_aws.negative_statement:
   en: Excessive privileges in {path}, avoid the use of negative statements
   es: Privilegios excesivos en {path}, evitar el uso de políticas negativas
 utils.model.finding.enum.F031_AWS.description:
