--- a/airs/content/pages/rules/system/186/index.adoc
+++ b/airs/content/pages/rules/system/186/index.adoc
@@ -43,82 +43,92 @@ The files are poisoned with a malicious payload
 by the adversary and may be passed through standard channels such as via email,
 and standard web content like PDF and multimedia files.
 
-. [[r3]] link:https://cwe.mitre.org/data/definitions/250.html[CWE-250: Execution with Unnecessary Privileges].
+. [[r3]] link:http://capec.mitre.org/data/definitions/27.html[CAPEC-27: Leveraging Race Conditions via Symbolic Links].
+This attack leverages the use of symbolic links (Symlinks) in order to write to
+sensitive files.
+An attacker can create a Symlink link to a target file not otherwise accessible
+to them.
+When the privileged program tries to create a temporary file with the same name
+as the Symlink link,
+it will actually write to the target file pointed to by the attackers' Symlink
+link.
+
+. [[r4]] link:https://cwe.mitre.org/data/definitions/250.html[CWE-250: Execution with Unnecessary Privileges].
 The software performs an operation at a privilege level that is higher than the
 minimum level required,
 which creates new weaknesses or amplifies the consequences of other weaknesses.
 
-. [[r4]] link:https://cwe.mitre.org/data/definitions/269.html[CWE-269: Improper Privilege Management].
+. [[r5]] link:https://cwe.mitre.org/data/definitions/269.html[CWE-269: Improper Privilege Management].
 The software does not properly assign, modify, track, or check privileges for
 an actor,
 creating an unintended sphere of control for that actor.
 
-. [[r5]] link:https://cwe.mitre.org/data/definitions/272.html[CWE-272: Least Privilege Violation].
+. [[r6]] link:https://cwe.mitre.org/data/definitions/272.html[CWE-272: Least Privilege Violation].
 The elevated privilege level required to perform operations such as *chroot()*
 should be dropped immediately after the operation is performed.
 
-. [[r6]] link:https://cwe.mitre.org/data/definitions/276.html[CWE-276: Incorrect Default Permissions].
+. [[r7]] link:https://cwe.mitre.org/data/definitions/276.html[CWE-276: Incorrect Default Permissions].
 The product, upon installation, sets incorrect permissions for an object that
 exposes it to an unintended actor.
 
-. [[r7]] link:https://cwe.mitre.org/data/definitions/285.html[CWE-285: Improper Authorization].
+. [[r8]] link:https://cwe.mitre.org/data/definitions/285.html[CWE-285: Improper Authorization].
 The software does not perform or incorrectly performs an authorization check
 when an actor attempts to access a resource or perform an action.
 
-. [[r8]] link:https://cwe.mitre.org/data/definitions/732.html[CWE-732: Incorrect Permission Assignment for Critical Resource].
+. [[r9]] link:https://cwe.mitre.org/data/definitions/732.html[CWE-732: Incorrect Permission Assignment for Critical Resource].
 The product specifies permissions for a security-critical resource in a way
 that allows that resource to be read or modified by unintended actors.
 
-. [[r9]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-6[NIST 800-53 AC-6]
+. [[r10]] link:https://nvd.nist.gov/800-53/Rev4/control/AC-6[NIST 800-53 AC-6]
 The organization employs the principle of least privilege,
 allowing only authorized accesses for users
 (or processes acting on behalf of users)
 which are necessary to accomplish assigned tasks
 in accordance with organizational missions and business functions.
 
-. [[r10]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
+. [[r11]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A5-Broken_Access_Control[OWASP Top 10 A5:2017-Broken Access Control].
 Restrictions on what authenticated users are allowed to do are often not
 properly enforced.
 Attackers can exploit these flaws to access unauthorized functionality and/or
 data, such as access other users' accounts, view sensitive files,
 modify other users' data, change access rights, etc.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.2 Authentication Architectural Requirements.(1.2.1)]
 Verify the use of unique or special low-privilege operating system accounts for
 all application components, services, and servers.
 
-. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.4 Access Control Architectural Requirements.(1.4.3)]
 Verify enforcement of the principle of least privilege in functions,
 data files, **URL**s, controllers, services, and other resources.
 This implies protection against spoofing and elevation of privilege.
 
-. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.3)]
 Verify that the principle of least privilege exists - users should only be able
 to access functions, data files, **URL**s, controllers, services, and other
 resources, for which they possess specific authorization.
 This implies protection against spoofing and elevation of privilege.
 
-. [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r15]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V4.1 General Access Control Design.(4.1.4)]
 Verify that the principle of deny by default exists whereby new users/roles
 start with minimal or no permissions and users/roles do not receive access to
 new features until access is explicitly assigned.
 
-. [[r15]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r16]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.2 Malicious Code Search.(10.2.2)]
 Verify that the application does not ask for unnecessary or excessive
 permissions to privacy related features or sensors, such as contacts, cameras,
 microphones, or location.
 
-. [[r16]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r17]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.2 Dependency.(14.2.6)]
 Verify that the attack surface is reduced by sandboxing or encapsulating third
 party libraries to expose only the required behavior into the application.
 
-. [[r17]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.4.1]
+. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.4.1]
 If disk encryption is used
 (rather than file- or column-level database encryption),
 logical access must be managed separately and independently of native operating
@@ -126,28 +136,28 @@ system authentication and access control mechanisms
 (for example, by not using local user account databases or general network
 login credentials).
 
-. [[r18]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.5.2]
+. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.5.2]
 Restrict access to cryptographic keys to the fewest number of custodians
 necessary.
 
-. [[r19]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.3]
+. [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.3]
 Ensure that anti-virus mechanisms are actively running and cannot be disabled
 or altered by users.
 
-. [[r20]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
+. [[r21]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.8]
 Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
 
-. [[r21]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.2]
+. [[r22]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 7.1.2]
 Restrict access to privileged user IDs to least privileges necessary to perform
 job responsibilities.
 
-. [[r22]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Appendix A1 A1.1]
+. [[r23]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Appendix A1 A1.1]
 Ensure that each entity only runs processes that have access to that entity's
 cardholder data environment.
 
-. [[r23]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Appendix A1 A1.2]
+. [[r24]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Appendix A1 A1.2]
 Restrict each entity's access and privileges to its own cardholder data
 environment only.
